Added groupContent route
